--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,15 @@
 <resources>
     <string name="app_name">RecipeHub</string>
     <string name="app_logo">App Logo</string>
+    <string-array name="rating_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+    <string-array name="recipe_options">
+        <item>Update</item>
+        <item>Delete</item>
+    </string-array>
 </resources>
